--- a/kaeledyr/index.html
+++ b/kaeledyr/index.html
@@ -1,9 +1,10 @@
 <html lang="da">
+  <head></head>
   <body>
     <h1>Mit kæledyr</h1>
     <a href="https://www.dkk.dk/race/grand-danois" target="_blank">
       <img
-        src="billede af olsen.jpg"
+        src="billede_af_olsen.jpg"
         alt="Billede af olsen"
         style="border-radius: 20%"
     /></a>
