--- a/kaeledyr/index.html
+++ b/kaeledyr/index.html
@@ -1,26 +1,27 @@
 <html lang="da">
-  <head></head>
-  <body>
-    <h1>Mit kæledyr</h1>
-    <a href="https://www.dkk.dk/race/grand-danois" target="_blank">
-      <img
-        src="billede_af_olsen.jpg"
-        alt="Billede af olsen"
-        style="border-radius: 20%"
-    /></a>
+  <head>
+    <body>
+      <h1>Mit kæledyr</h1>
+      <a href="https://www.dkk.dk/race/grand-danois" target="_blank">
+        <img
+          src="billede_af_olsen.jpg"
+          alt="Billede af olsen"
+          style="border-radius: 20%"
+      /></a>
 
-    <p>Klik på mig</p>
-    <h3>om Olsen</h3>
-    <p>
-      Mit kæledyr hedder olsen og er en grand danois. Det er den tredje grand
-      danois vi har haft som hedder Olsen, da de ikke har så lang levetid.
-    </p>
-    <br />
-    <h3>Olsens egenskaber</h3>
-    <ul>
-      <li>sofahund</li>
-      <li>familiehund</li>
-      <li>snorker</li>
-    </ul>
-  </body>
+      <p>Klik på mig</p>
+      <h3>om Olsen</h3>
+      <p>
+        Mit kæledyr hedder olsen og er en grand danois. Det er den tredje grand
+        danois vi har haft som hedder Olsen, da de ikke har så lang levetid.
+      </p>
+      <br />
+      <h3>Olsens egenskaber</h3>
+      <ul>
+        <li>sofahund</li>
+        <li>familiehund</li>
+        <li>snorker</li>
+      </ul>
+    </body>
+  </head>
 </html>
